# icosahedron

./: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp  my_view.cpp  my_view.h
